# serverless-benchmark

./: bootstrap  stress.sh
deduplicate-java/: pom.xml
deduplicate-java/src/main/java/com/github/norwae/deduplicate/: AliasRepository.java  Deduplicate.java  HashedObjectFactory.java  HashedS3Object.java
deduplicate-java/src/main/java/com/github/norwae/deduplicate/model/: CanonicalName.java  FileAlias.java
deduplicate-rust/: Cargo.toml  Dockerfile
deduplicate-rust/src/: main.rs
src/: dynamo_serde_mapping.rs
