[package]
name = "deduplicate-rust"
version = "0.1.0"
authors = ["Elisabeth Schulz <elisabeth.schulz@codecentric.de>"]
edition = "2018"


[profile.release]
lto = 'thin'
panic = 'abort'
codegen-units = 1


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
base64 = "0.13"
futures = "0.3"
bytes = "1.0"

lambda_runtime  = "0.3.0"

ring = "0.16"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tokio = "1.5"

rusoto_core = { version = "0.46", features = ["rustls"], default-features = false }
rusoto_dynamodb = { version = "0.46", features = ["rustls", "deserialize_structs"], default-features = false }
rusoto_s3 = { version = "0.46", features = ["rustls"], default-features = false }